--- a/contact.html
+++ b/contact.html
@@ -29,12 +29,12 @@
             <div class="contact-details">
                 <div class="contact-item">
                     <h3>Phone</h3>
-                    <p id="phone-number">+44 7459 843597</p>
+                    <p id="phone-number">+44 793606206</p>
                     <button class="copy-btn" data-clipboard="phone-number">Copy Phone</button>
                 </div>
                 <div class="contact-item">
                     <h3>Email</h3>
-                    <p id="email-address">Mirableize@flocare.org</p>
+                    <p id="email-address">Mirabelize@flocare.org</p>
                     <button class="copy-btn" data-clipboard="email-address">Copy Email</button>
                 </div>
             </div>
