--- a/about.html
+++ b/about.html
@@ -1,87 +1,218 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" id="top">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FloCare - About Us</title>
-    <link rel="stylesheet" href="flocare.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>About Us — FloCare</title>
+  <link rel="stylesheet" href="index.css" />
+  <meta name="description" content="Learn about FloCare—our mission, story, core values, certifications, and the team delivering high-quality cleaning services." />
 </head>
 <body>
-    <header>
-        <div class="container">
-            <h1>FloCare</h1>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About Us</a></li>
-                    <li><a href="services.html">Services</a></li>
-                    <li><a href="contact.html">Contact Us</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+  <a class="skip-link" href="#main">Skip to content</a>
 
-    <!-- About Section -->
-    <section id="about" class="hero">
-        <div class="container">
-            <h2>About Us</h2>
-            <p>
-                At FloCare, we go beyond cleaning. We believe in creating spaces that inspire, comfort, and uplift while leaving a positive and lasting impact on the environment. As a trusted local cleaning service, we are driven by a mission to make every space not just clean, but cared for.
-            </p>
+  <header class="site-header">
+    <div class="container header-inner">
+      <a class="brand" href="index.html" aria-label="FloCare Home">
+        <img src="logo.jpg" alt="" class="logo" />
+        <span class="brand-text">FloCare</span>
+      </a>
+
+      <nav class="site-nav" aria-label="Primary">
+        <button class="nav-toggle" aria-expanded="false" aria-controls="primary-menu">
+          <span class="sr-only">Toggle navigation</span>
+          ☰
+        </button>
+        <ul id="primary-menu">
+          <li><a href="index.html">Home</a></li>
+          <li><a class="active" href="about.html">About Us</a></li>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <main id="main">
+    <!-- Hero -->
+    <section class="hero" aria-label="About FloCare">
+      <div class="container hero-inner">
+        <div class="hero-copy">
+          <h1>About FloCare</h1>
+          <p class="lead">
+            Local, reliable and detail-driven. We help homes and businesses stay spotless with
+            professional cleaning tailored to your needs.
+          </p>
         </div>
+      </div>
     </section>
 
-    <!-- Mission and Vision Section -->
-    <section id="mission-vision" class="values">
-        <div class="container">
+    <!-- Mission & Story -->
+    <section class="section">
+      <div class="container">
+        <div class="grid-3" style="grid-template-columns: 1.1fr 1.1fr 0.8fr;">
+          <article class="feature-card" style="grid-column: span 2;">
             <h2>Our Mission</h2>
             <p>
-                To deliver exceptional cleaning services that transform spaces while promoting sustainable practices and contributing to healthier, happier communities.
+              To deliver consistent, high-quality cleaning that creates healthier, happier spaces.
+              We combine trained professionals, safe products and smart workflows to exceed expectations
+              on every visit.
             </p>
-            <h2>Our Vision</h2>
-            <p>
-                To be recognized as a leader in sustainable cleaning solutions, fostering trust and making a meaningful difference in the lives of our clients and the environment.
-            </p>
+          </article>
+          <aside class="feature-card" aria-label="At a glance">
+            <h3>At a Glance</h3>
+            <p><strong>Founded:</strong> 2024</p>
+            <p><strong>Focus:</strong> Domestic, commercial & hospitality</p>
+            <p><strong>Coverage:</strong> Local area</p>
+            <p><strong>Approach:</strong> Reliable, eco-aware, tailored</p>
+          </aside>
         </div>
-    </section>
 
-    <!-- Our Commitment Section -->
-    <section id="commitment" class="hero">
-        <div class="container">
-            <h2>Our Commitment</h2>
+        <div class="grid-3" style="margin-top:1.1rem;">
+          <article class="feature-card">
+            <h3>Our Story</h3>
             <p>
-                Flocare is committed to:
+              FloCare began with a simple idea: cleaning should feel effortless for clients and
+              be delivered with pride by professionals. From our first homes to larger sites,
+              we’ve grown through word-of-mouth and a commitment to doing the little things right.
             </p>
-            <ul>
-                <li>Using eco-friendly products to minimize environmental impact.</li>
-                <li>Maintaining the highest standards of cleanliness and hygiene.</li>
-                <li>Fostering long-term relationships with clients through reliability and excellence.</li>
-                <li>Contributing to the well-being of our community and the planet.</li>
+          </article>
+          <article class="feature-card">
+            <h3>What Guides Us</h3>
+            <ul style="margin:0; padding-left:1.2rem;">
+              <li>Consistency over one-off perfection</li>
+              <li>Clear communication and fair pricing</li>
+              <li>Respect for your time, space and belongings</li>
+              <li>Continuous improvement through feedback</li>
             </ul>
-        </div>
-    </section>
-
-    <!-- Call-to-Action Section -->
-    <section id="cta" class="hero">
-        <div class="container">
-            <h2>Let’s Make a Difference Together</h2>
+          </article>
+          <article class="feature-card">
+            <h3>Eco-Aware</h3>
             <p>
-                Join us in creating cleaner spaces and a greener future. Contact Flocare today to learn how we can serve your cleaning needs while caring for the environment.
+              Wherever possible we use environmentally safer products and efficient methods to
+              reduce waste without compromising results.
             </p>
-            <a href="contact.html" class="btn">Contact Us</a>
+          </article>
         </div>
+      </div>
     </section>
 
-    <!-- Footer -->
-    <footer class="footer">
-        <div class="container">
-            <p>&copy; 2024 FloCare. All rights reserved.</p>
-            <div class="social-media">
-                <a href="https://www.instagram.com/flocare_cleaning_services?igsh=YWUzN3RvdW1kdWFv&ut-m_source=gr" target="_blank" aria-label="Instagram">
-                    <img src="instagram.png" alt="Instagram Icon" class="social-icon">
-                </a>
-            </div>
+    <!-- Certifications / Insurance / Standards -->
+    <section class="section section-bg" aria-labelledby="standards-title">
+      <div class="container">
+        <h2 id="standards-title" class="section-title">Standards & Assurance</h2>
+        <div class="grid-3">
+          <article class="feature-card">
+            <h3>Trained Staff</h3>
+            <p>Team members are onboarded with checklists, site walkthroughs and health & safety training.</p>
+          </article>
+          <article class="feature-card">
+            <h3>Insured Service</h3>
+            <p>Fully insured for peace of mind across domestic and commercial engagements.</p>
+          </article>
+          <article class="feature-card">
+            <h3>Quality Checks</h3>
+            <p>Routine spot-checks and client feedback loops to keep standards consistently high.</p>
+          </article>
         </div>
-    </footer>
+      </div>
+    </section>
+
+    <!-- Team -->
+    <section class="section" aria-labelledby="team-title">
+      <div class="container">
+        <h2 id="team-title" class="section-title">Meet the Team</h2>
+
+        <div class="cards-container">
+          <!-- Team Member 1 -->
+          <div class="card" aria-label="Team member">
+            <div class="card-inner">
+              <div class="card-face card-front">
+                <div>
+                  <img src="team1.jpg" alt="Team member portrait" style="width:88px;height:88px;border-radius:50%;margin:0 auto 0.75rem;object-fit:cover;">
+                  <h3>Lead Supervisor</h3>
+                  <p class="lead" style="margin-top:.25rem;">Operations & Quality</p>
+                </div>
+              </div>
+              <div class="card-face card-back">
+                <p>Oversees schedules, site checks and client onboarding to keep everything running smoothly.</p>
+              </div>
+            </div>
+          </div>
+
+          <!-- Team Member 2 -->
+          <div class="card" aria-label="Team member">
+            <div class="card-inner">
+              <div class="card-face card-front">
+                <div>
+                  <img src="team2.jpg" alt="Team member portrait" style="width:88px;height:88px;border-radius:50%;margin:0 auto 0.75rem;object-fit:cover;">
+                  <h3>Senior Cleaner</h3>
+                  <p class="lead" style="margin-top:.25rem;">Domestic & Hospitality</p>
+                </div>
+              </div>
+              <div class="card-face card-back">
+                <p>Specialist in deep cleans and hospitality turnaround with an eye for detail.</p>
+              </div>
+            </div>
+          </div>
+
+          <!-- Team Member 3 -->
+          <div class="card" aria-label="Team member">
+            <div class="card-inner">
+              <div class="card-face card-front">
+                <div>
+                  <img src="team3.jpg" alt="Team member portrait" style="width:88px;height:88px;border-radius:50%;margin:0 auto 0.75rem;object-fit:cover;">
+                  <h3>Client Care</h3>
+                  <p class="lead" style="margin-top:.25rem;">Bookings & Support</p>
+                </div>
+              </div>
+              <div class="card-face card-back">
+                <p>First point of contact for quotes, scheduling, and post-service feedback.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <p class="hint">Tip: Hover or tap a card to see more.</p>
+      </div>
+    </section>
+
+    <!-- CTA -->
+    <section class="section section-bg" aria-label="Get a quote">
+      <div class="container" style="text-align:center;">
+        <h2 class="section-title">Ready to Learn More?</h2>
+        <p class="lead" style="max-width:720px;margin:0 auto 1rem;">
+          From homes to hospitality, we’ll tailor a plan that fits your space, schedule and budget.
+        </p>
+        <a href="contact.html" class="btn btn-primary">Request a Quote</a>
+        <p class="back-to-top"><a href="#top" class="btn btn-ghost" aria-label="Back to top">Back to top ↑</a></p>
+      </div>
+    </section>
+  </main>
+
+  <footer class="site-footer">
+    <div class="container footer-inner">
+      <p>&copy; <span id="year"></span> FloCare. All rights reserved.</p>
+      <div class="social-media">
+        <a href="https://www.instagram.com/flocare_cleaning_services?igsh=YWUzN3RvdW1kdWFv&ut-m_source=gr" target="_blank" rel="noopener" aria-label="FloCare on Instagram">
+          <img src="instagram.png" alt="Instagram" class="social-icon" />
+        </a>
+      </div>
+    </div>
+  </footer>
+
+  <script>
+    // Mobile nav toggle
+    const toggle = document.querySelector('.nav-toggle');
+    const menu = document.querySelector('#primary-menu');
+    if (toggle && menu) {
+      toggle.addEventListener('click', () => {
+        const expanded = toggle.getAttribute('aria-expanded') === 'true';
+        toggle.setAttribute('aria-expanded', String(!expanded));
+        menu.classList.toggle('open');
+      });
+    }
+    // Year
+    document.getElementById('year').textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
