--- a/services.html
+++ b/services.html
@@ -1,105 +1,255 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" id="top">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flocare - Our Services</title>
-    <link rel="stylesheet" href="flocare.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Services — FloCare</title>
+  <link rel="stylesheet" href="index.css" />
+  <meta name="description" content="Explore FloCare’s cleaning services for homes, businesses, and hospitality—plus add-ons, pricing, and FAQs." />
 </head>
 <body>
-    <header>
-        <div class="container">
-            <h1>Flocare</h1>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About Us</a></li>
-                    <li><a href="services.html">Services</a></li>
-                    <li><a href="contact.html">Contact Us</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+  <a class="skip-link" href="#main">Skip to content</a>
 
-    <!-- Services Section -->
-    <section id="services" class="hero">
-        <div class="container">
-            <h2>Our Services</h2>
-            <p>Flocare offers a range of cleaning and maintenance services designed to meet your unique needs. Whether it's a home, care facility, or business space, we bring professionalism and care to every task.</p>
+  <header class="site-header">
+    <div class="container header-inner">
+      <a class="brand" href="index.html" aria-label="FloCare Home">
+        <img src="logo.jpg" alt="" class="logo" />
+        <span class="brand-text">FloCare</span>
+      </a>
+
+      <nav class="site-nav" aria-label="Primary">
+        <button class="nav-toggle" aria-expanded="false" aria-controls="primary-menu">
+          <span class="sr-only">Toggle navigation</span>
+          ☰
+        </button>
+        <ul id="primary-menu">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About Us</a></li>
+          <li><a class="active" href="services.html">Services</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <main id="main">
+    <!-- Hero -->
+    <section class="hero" aria-label="Our Services">
+      <div class="container hero-inner">
+        <div class="hero-copy">
+          <h1>Cleaning Services</h1>
+          <p class="lead">
+            Reliable, high-standard cleaning for homes, businesses, and hospitality—tailored to your schedule and space.
+          </p>
+          <a href="contact.html" class="btn btn-primary">Get a Free Quote</a>
         </div>
+      </div>
     </section>
 
-    <!-- Services List with Interactive Cards -->
-    <section class="services-list">
-        <div class="container">
-            <div class="service-card">
-                <h3>Residential Cleaning</h3>
-                <p>Keep your home spotless with our thorough cleaning services tailored to your lifestyle.</p>
-                <button class="toggle-details">Learn More</button>
-                <div class="service-details">
-                    <p>Our residential cleaning services include kitchen cleaning, bathroom sanitation, dusting, vacuuming, and more to make your home feel fresh and welcoming.</p>
-                </div>
-            </div>
+    <!-- Service Categories -->
+    <section class="section" aria-labelledby="categories-title">
+      <div class="container">
+        <h2 id="categories-title" class="section-title">What We Do</h2>
+        <div class="grid-3">
+          <article class="feature-card">
+            <h3>Domestic Cleaning</h3>
+            <p class="lead">Regular, deep, end-of-tenancy</p>
+            <ul style="margin:0; padding-left:1.2rem;">
+              <li>Kitchens, bathrooms, bedrooms & living areas</li>
+              <li>Appliance exteriors, dusting, vacuum & mop</li>
+              <li>Limescale, grout & oven deep clean (add-on)</li>
+            </ul>
+          </article>
 
-            <div class="service-card">
-                <h3>Commercial Cleaning</h3>
-                <p>Ensure your workspace remains productive and inviting with our professional cleaning services.</p>
-                <button class="toggle-details">Learn More</button>
-                <div class="service-details">
-                    <p>We handle office spaces, retail stores, and more with services like floor care, waste management, and high-touch surface cleaning.</p>
-                </div>
-            </div>
+          <article class="feature-card">
+            <h3>Commercial Cleaning</h3>
+            <p class="lead">Offices, retail, clinics</p>
+            <ul style="margin:0; padding-left:1.2rem;">
+              <li>Daily/weekly contracts to suit hours</li>
+              <li>Desks, touchpoints, washrooms, bins</li>
+              <li>Opening/closing & keyed access available</li>
+            </ul>
+          </article>
 
-            <div class="service-card">
-                <h3>Care Facility Cleaning</h3>
-                <p>Hygiene-focused cleaning for care homes and medical facilities, ensuring safety and cleanliness.</p>
-                <button class="toggle-details">Learn More</button>
-                <div class="service-details">
-                    <p>We use hospital-grade disinfectants and follow strict protocols to ensure a safe environment for patients and staff.</p>
-                </div>
-            </div>
-
-            <div class="service-card">
-                <h3>Hospitality Cleaning</h3>
-                <p>Impress your guests with spotless accommodations and common areas.</p>
-                <button class="toggle-details">Learn More</button>
-                <div class="service-details">
-                    <p>Our hospitality cleaning covers hotel rooms, lobbies, and dining areas, ensuring the highest standards of cleanliness.</p>
-                </div>
-            </div>
+          <article class="feature-card">
+            <h3>Hospitality Cleaning</h3>
+            <p class="lead">Airbnb, serviced apartments, B&Bs</p>
+            <ul style="margin:0; padding-left:1.2rem;">
+              <li>Turnover cleans with linen change</li>
+              <li>Staging, supplies top-ups & laundry coordination</li>
+              <li>Guest-ready checks & photo confirmation</li>
+            </ul>
+          </article>
         </div>
+      </div>
     </section>
 
-    <!-- Call-to-Action Section -->
-    <section id="cta" class="hero">
-        <div class="container">
-            <h2>Ready to Experience Flocare?</h2>
-            <p>Contact us today to learn how we can make your space cleaner, safer, and more inviting.</p>
-            <a href="contact.html" class="btn">Get Started</a>
+    <!-- Add-ons -->
+    <section class="section section-bg" aria-labelledby="addons-title">
+      <div class="container">
+        <h2 id="addons-title" class="section-title">Popular Add-Ons</h2>
+        <div class="grid-3">
+          <article class="feature-card">
+            <h3>Deep Kitchen Reset</h3>
+            <p>Oven interior, hob & extractor detail, inside cabinets (emptied on request), splashback de-grease.</p>
+          </article>
+          <article class="feature-card">
+            <h3>Bathroom Descale</h3>
+            <p>Shower screens, tiles & grout attention, fixtures polish, mould spot treatment where safe.</p>
+          </article>
+          <article class="feature-card">
+            <h3>Move-In/Out</h3>
+            <p>Vacant property reset including inside cupboards, inside fridge/freezer, skirting & sockets.</p>
+          </article>
+          <article class="feature-card">
+            <h3>Carpet & Upholstery</h3>
+            <p>Hot water extraction via trusted partners; we handle booking and coordination.</p>
+          </article>
+          <article class="feature-card">
+            <h3>After-Build</h3>
+            <p>Dust removal in stages, socket/switch plate wipe-downs, frame & sill detail, floor care.</p>
+          </article>
+          <article class="feature-card">
+            <h3>Exterior Touches</h3>
+            <p>Porch sweep, spot window clean (ground floor), bins disinfected—on request.</p>
+          </article>
         </div>
+      </div>
     </section>
 
-    <!-- Footer -->
-    <footer class="footer">
-        <div class="container">
-            <p>&copy; 2024 FloCare. All rights reserved.</p>
-            <div class="social-media">
-                <a href="https://www.instagram.com/flocare_cleaning_services?igsh=YWUzN3RvdW1kdWFv&ut-m_source=gr" target="_blank" aria-label="Instagram">
-                    <img src="instagram.png" alt="Instagram Icon" class="social-icon">
-                </a>
-            </div>
+    <!-- Simple Pricing (guide) -->
+    <section class="section" aria-labelledby="pricing-title">
+      <div class="container">
+        <h2 id="pricing-title" class="section-title">Pricing Guide</h2>
+        <div class="grid-3">
+          <article class="feature-card" aria-label="Domestic pricing">
+            <h3>Domestic</h3>
+            <p class="lead">From £<strong>XX</strong>/hour (2-hour min)</p>
+            <ul style="margin:0; padding-left:1.2rem;">
+              <li>All materials & standard equipment included</li>
+              <li>Eco-aware products available</li>
+              <li>Discounts for weekly/biweekly plans</li>
+            </ul>
+          </article>
+          <article class="feature-card" aria-label="Commercial pricing">
+            <h3>Commercial</h3>
+            <p class="lead">Site-based quote</p>
+            <ul style="margin:0; padding-left:1.2rem;">
+              <li>Out-of-hours & keyed access options</li>
+              <li>Clear task lists & SLAs</li>
+              <li>Monthly reporting on request</li>
+            </ul>
+          </article>
+          <article class="feature-card" aria-label="Hospitality pricing">
+            <h3>Hospitality</h3>
+            <p class="lead">Per-turnover pricing</p>
+            <ul style="margin:0; padding-left:1.2rem;">
+              <li>Linen change & staging</li>
+              <li>Supply restock checklist</li>
+              <li>Photo confirmation after each clean</li>
+            </ul>
+          </article>
         </div>
-    </footer>
+        <p class="hint" style="text-align:center; margin-top:1rem;">
+          Final pricing depends on property size, condition, frequency and selected add-ons.
+        </p>
+        <p style="text-align:center; margin-top:.5rem;">
+          <a class="btn btn-primary" href="contact.html">Request Your Exact Quote</a>
+        </p>
+      </div>
+    </section>
 
-    <script>
-        // Interactive script for toggling service details
-        document.querySelectorAll('.toggle-details').forEach(button => {
-            button.addEventListener('click', () => {
-                const details = button.nextElementSibling;
-                details.style.display = details.style.display === 'block' ? 'none' : 'block';
-                button.textContent = details.style.display === 'block' ? 'Show Less' : 'Learn More';
-            });
-        });
-    </script>
+    <!-- Our Process -->
+    <section class="section section-bg" aria-labelledby="process-title">
+      <div class="container">
+        <h2 id="process-title" class="section-title">How It Works</h2>
+        <div class="grid-3">
+          <article class="feature-card">
+            <h3>1) Quick Quote</h3>
+            <p>Tell us about your space, preferred days, and priorities. We’ll confirm a clear, no-obligation quote.</p>
+          </article>
+          <article class="feature-card">
+            <h3>2) Tailored Plan</h3>
+            <p>We create a task list and schedule around you—weekly, biweekly, monthly, or one-off deep clean.</p>
+          </article>
+          <article class="feature-card">
+            <h3>3) Quality Clean</h3>
+            <p>Trained staff follow checklists; spot-checks and feedback loops keep standards consistently high.</p>
+          </article>
+        </div>
+      </div>
+    </section>
+
+    <!-- FAQs -->
+    <section class="section" aria-labelledby="faqs-title">
+      <div class="container">
+        <h2 id="faqs-title" class="section-title">FAQs</h2>
+        <div class="grid-3">
+          <article class="feature-card">
+            <h3>Do I need to be home?</h3>
+            <p>No—many clients provide keyed access or codes. We can clean during work hours or while you’re away.</p>
+          </article>
+          <article class="feature-card">
+            <h3>Do you bring supplies?</h3>
+            <p>Yes, we bring standard materials and equipment. If you prefer specific brands, we can use yours.</p>
+          </article>
+          <article class="feature-card">
+            <h3>Can I change my schedule?</h3>
+            <p>Absolutely. Let us know 24 hours in advance to reschedule. Recurring clients can adjust any time.</p>
+          </article>
+          <article class="feature-card">
+            <h3>Are you insured?</h3>
+            <p>Yes, we’re fully insured for domestic and commercial work for peace of mind.</p>
+          </article>
+          <article class="feature-card">
+            <h3>What areas do you cover?</h3>
+            <p>We focus on the local area. Tell us your postcode on the quote form and we’ll confirm coverage.</p>
+          </article>
+          <article class="feature-card">
+            <h3>What about pets?</h3>
+            <p>Pet-friendly! Please mention any pets or special instructions—doors, feeding times, or nervous animals.</p>
+          </article>
+        </div>
+      </div>
+    </section>
+
+    <!-- CTA -->
+    <section class="section section-bg" aria-label="Get started">
+      <div class="container" style="text-align:center;">
+        <h2 class="section-title">Ready for a Sparkling Space?</h2>
+        <p class="lead" style="max-width:720px;margin:0 auto 1rem;">
+          Send us your details and preferred times—we’ll tailor a plan and confirm your quote.
+        </p>
+        <a href="contact.html" class="btn btn-primary">Book Your Clean</a>
+        <p class="back-to-top"><a href="#top" class="btn btn-ghost" aria-label="Back to top">Back to top ↑</a></p>
+      </div>
+    </section>
+  </main>
+
+  <footer class="site-footer">
+    <div class="container footer-inner">
+      <p>&copy; <span id="year"></span> FloCare. All rights reserved.</p>
+      <div class="social-media">
+        <a href="https://www.instagram.com/flocare_cleaning_services?igsh=YWUzN3RvdW1kdWFv&ut-m_source=gr" target="_blank" rel="noopener" aria-label="FloCare on Instagram">
+          <img src="instagram.png" alt="Instagram" class="social-icon" />
+        </a>
+      </div>
+    </div>
+  </footer>
+
+  <script>
+    // Mobile nav toggle
+    const toggle = document.querySelector('.nav-toggle');
+    const menu = document.querySelector('#primary-menu');
+    if (toggle && menu) {
+      toggle.addEventListener('click', () => {
+        const expanded = toggle.getAttribute('aria-expanded') === 'true';
+        toggle.setAttribute('aria-expanded', String(!expanded));
+        menu.classList.toggle('open');
+      });
+    }
+    // Year
+    document.getElementById('year').textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
