--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>About Us — FloCare</title>
+  <title>About Us — FLOcare</title>
   <link rel="stylesheet" href="index.css" />
   <meta name="description" content="Learn about FloCare—our mission, story, core values, certifications, and the team delivering high-quality cleaning services." />
 </head>
@@ -14,7 +14,7 @@
     <div class="container header-inner">
       <a class="brand" href="index.html" aria-label="FloCare Home">
         <img src="logo.jpg" alt="" class="logo" />
-        <span class="brand-text">FloCare</span>
+        <span class="brand-text">FLOcare</span>
       </a>
 
       <nav class="site-nav" aria-label="Primary">
@@ -37,7 +37,7 @@
     <section class="hero" aria-label="About FloCare">
       <div class="container hero-inner">
         <div class="hero-copy">
-          <h1>About FloCare</h1>
+          <h1>About FLOcare</h1>
           <p class="lead">
             Local, reliable and detail-driven. We help homes and businesses stay spotless with
             professional cleaning tailored to your needs.
@@ -71,7 +71,7 @@
           <article class="feature-card">
             <h3>Our Story</h3>
             <p>
-              FloCare began with a simple idea: cleaning should feel effortless for clients and
+              FLOcare began with a simple idea: cleaning should feel effortless for clients and
               be delivered with pride by professionals. From our first homes to larger sites,
               we’ve grown through word-of-mouth and a commitment to doing the little things right.
             </p>
@@ -191,7 +191,7 @@
 
   <footer class="site-footer">
     <div class="container footer-inner">
-      <p>&copy; <span id="year"></span> FloCare. All rights reserved.</p>
+      <p>&copy; <span id="year"></span> FLOcare. All rights reserved.</p>
       <div class="social-media">
         <a href="https://www.instagram.com/flocare_cleaning_services?igsh=YWUzN3RvdW1kdWFv&ut-m_source=gr" target="_blank" rel="noopener" aria-label="FloCare on Instagram">
           <img src="instagram.png" alt="Instagram" class="social-icon" />
