--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Contact Us — FLOcare</title>
+  <title>Contact Us — FloCare</title>
   <link rel="stylesheet" href="index.css" />
-  <meta name="description" content="Contact FLOcare for cleaning services. Call, email, WhatsApp, or book instantly via Booksy. View our hours and service areas." />
+  <meta name="description" content="Contact FloCare for cleaning services. Call, email, WhatsApp, or book instantly via Booksy. View our hours and service areas." />
 
   <!-- Page-specific styles (responsive map) -->
   <style>
@@ -61,14 +61,14 @@
     <section class="hero" aria-label="Contact FloCare">
       <div class="container hero-inner">
         <div class="hero-copy">
-          <h1>Contact FLOcare</h1>
+          <h1>Contact FloCare</h1>
           <p class="lead">
             Prefer a quick chat? Reach us by phone, email, or WhatsApp — or book instantly via Booksy.
           </p>
           <p style="margin-top:1rem; display:flex; gap:.6rem; justify-content:center; flex-wrap:wrap;">
             <a class="btn btn-primary" href="https://booksy.com/en-gb/162958_flocare-cleaning-services_professional-services_25535_united-kingdom?do=invite&_branch_match_id=1484140428641512193&utm_medium=profile_share_from_profile&_branch_referrer=H4sIAAAAAAAAA8soKSkottLXT07J0UvKz88urtRLzs%2FVt6wKciqINPZzC0uyrytKTUstKsrMS49PKsovL04tsnXOKMrPTQUAbyHdazwAAAA%3D" target="_blank" rel="noopener" aria-label="Book FloCare on Booksy">Book on Booksy</a>
             <a class="btn btn-ghost" href="tel:+447936060206" aria-label="Call FloCare">Call Us</a>
-            <a class="btn btn-ghost" href="mailto:Mirabelize@flocare.org" aria-label="Email FLOcare">Email Us</a>
+            <a class="btn btn-ghost" href="mailto:Mirabelize@flocare.org" aria-label="Email FloCare">Email Us</a>
           </p>
         </div>
       </div>
@@ -142,7 +142,7 @@
           <article class="feature-card" aria-label="Location">
             <h3>Location</h3>
             <address style="font-style:normal;">
-              FLOCare<br />
+              FloCare<br />
               96 Malvern St, Belfast BT13 1JB<br />
               Northern Ireland, United Kingdom
             </address>
@@ -252,4 +252,3 @@
   </script>
 </body>
 </html>
-
