--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Services — FloCare</title>
+  <title>Services — FLOcare</title>
   <link rel="stylesheet" href="index.css" />
   <meta name="description" content="Explore FloCare’s cleaning services for homes, businesses, and hospitality—plus add-ons, pricing, and FAQs." />
 </head>
@@ -14,7 +14,7 @@
     <div class="container header-inner">
       <a class="brand" href="index.html" aria-label="FloCare Home">
         <img src="logo.jpg" alt="" class="logo" />
-        <span class="brand-text">FloCare</span>
+        <span class="brand-text">FLOcare</span>
       </a>
 
       <nav class="site-nav" aria-label="Primary">
@@ -120,11 +120,10 @@
     <!-- Simple Pricing (guide) -->
     <section class="section" aria-labelledby="pricing-title">
       <div class="container">
-        <h2 id="pricing-title" class="section-title">Pricing Guide</h2>
+        <h2 id="pricing-title" class="section-title">Guide</h2>
         <div class="grid-3">
           <article class="feature-card" aria-label="Domestic pricing">
             <h3>Domestic</h3>
-            <p class="lead">From £<strong>XX</strong>/hour (2-hour min)</p>
             <ul style="margin:0; padding-left:1.2rem;">
               <li>All materials & standard equipment included</li>
               <li>Eco-aware products available</li>
@@ -228,7 +227,7 @@
 
   <footer class="site-footer">
     <div class="container footer-inner">
-      <p>&copy; <span id="year"></span> FloCare. All rights reserved.</p>
+      <p>&copy; <span id="year"></span> FLOcare. All rights reserved.</p>
       <div class="social-media">
         <a href="https://www.instagram.com/flocare_cleaning_services?igsh=YWUzN3RvdW1kdWFv&ut-m_source=gr" target="_blank" rel="noopener" aria-label="FloCare on Instagram">
           <img src="instagram.png" alt="Instagram" class="social-icon" />
