--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Contact Us — FloCare</title>
+  <title>Contact Us — FLocare</title>
   <link rel="stylesheet" href="index.css" />
   <meta name="description" content="Contact FloCare for cleaning services. Call, email, WhatsApp, or book instantly via Booksy. View our hours and service areas." />
 
@@ -61,7 +61,7 @@
     <section class="hero" aria-label="Contact FloCare">
       <div class="container hero-inner">
         <div class="hero-copy">
-          <h1>Contact FloCare</h1>
+          <h1>Contact FLOcare</h1>
           <p class="lead">
             Prefer a quick chat? Reach us by phone, email, or WhatsApp — or book instantly via Booksy.
           </p>
@@ -198,7 +198,7 @@
 
   <footer class="site-footer">
     <div class="container footer-inner">
-      <p>&copy; <span id="year"></span> FloCare. All rights reserved.</p>
+      <p>&copy; <span id="year"></span> FlOcare. All rights reserved.</p>
       <div class="social-media">
         <a href="https://www.instagram.com/flocare_cleaning_services?igsh=YWUzN3RvdW1kdWFv&ut-m_source=gr" target="_blank" rel="noopener" aria-label="FloCare on Instagram">
           <img src="instagram.png" alt="Instagram" class="social-icon" />
