--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>FloCare — Professional Cleaning, Domestic & Hospitality Services</title>
+  <title>FLOcare — Professional Cleaning, Domestic & Hospitality Services</title>
   <link rel="stylesheet" href="index.css" />
   <meta name="description" content="FloCare provides professional cleaning, domestic, and hospitality services. Reliable, affordable, and tailored to your needs." />
 </head>
@@ -15,13 +15,13 @@
     <div class="container header-inner">
       <a class="brand" href="index.html" aria-label="FloCare Home">
         <img src="logo.jpg" alt="" class="logo" />
-        <span class="brand-text">FloCare</span>
+        <span class="brand-text">FLOcare</span>
       </a>
 
       <nav class="site-nav" aria-label="Primary">
         <button class="nav-toggle" aria-expanded="false" aria-controls="primary-menu">
           <span class="sr-only">Toggle navigation</span>
-          ☰
+          
         </button>
         <ul id="primary-menu">
           <li><a class="active" href="index.html">Home</a></li>
@@ -38,7 +38,7 @@
     <section class="hero" aria-label="Welcome to FloCare">
       <div class="container hero-inner">
         <div class="hero-copy">
-          <h1>Welcome to FloCare</h1>
+          <h1>Welcome to FLOcare</h1>
           <p class="lead">
             We bring sparkle to your space with professional cleaning, domestic, and hospitality services.
             Your comfort and satisfaction are our priority.
@@ -52,7 +52,7 @@
     <!-- Features -->
     <section class="features section">
       <div class="container">
-        <h2 class="section-title">Why Choose FloCare?</h2>
+        <h2 class="section-title">Why Choose FLOcare?</h2>
         <div class="grid-3">
           <article class="feature-card">
             <h3>Experienced Professionals</h3>
@@ -64,7 +64,7 @@
           </article>
           <article class="feature-card">
             <h3>Affordable Pricing</h3>
-            <p>Get exceptional cleaning services without breaking the bank. Quality meets affordability at FloCare.</p>
+            <p>Get exceptional cleaning services without breaking the bank. Quality meets affordability at FLOcare.</p>
           </article>
         </div>
       </div>
@@ -159,7 +159,7 @@
 
   <footer class="site-footer">
     <div class="container footer-inner">
-      <p>&copy; <span id="year"></span> FloCare. All rights reserved.</p>
+      <p>&copy; <span id="year"></span> FLOcare. All rights reserved.</p>
       <div class="social-media">
         <a href="https://www.instagram.com/flocare_cleaning_services?igsh=YWUzN3RvdW1kdWFv&ut-m_source=gr" target="_blank" rel="noopener" aria-label="FloCare on Instagram">
           <img src="instagram.png" alt="Instagram" class="social-icon" />
