--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
     <div class="container header-inner">
       <a class="brand" href="index.html" aria-label="FloCare Home">
         <img src="logo.jpg" alt="" class="logo" />
-        <span class="brand-text">FloCare</span>
+        <span class="brand-text">FLOcare</span>
       </a>
 
       <nav class="site-nav" aria-label="Primary">
@@ -198,7 +198,7 @@
 
   <footer class="site-footer">
     <div class="container footer-inner">
-      <p>&copy; <span id="year"></span> FlOcare. All rights reserved.</p>
+      <p>&copy; <span id="year"></span> FLOcare. All rights reserved.</p>
       <div class="social-media">
         <a href="https://www.instagram.com/flocare_cleaning_services?igsh=YWUzN3RvdW1kdWFv&ut-m_source=gr" target="_blank" rel="noopener" aria-label="FloCare on Instagram">
           <img src="instagram.png" alt="Instagram" class="social-icon" />
@@ -227,7 +227,7 @@
   {
     "@context": "https://schema.org",
     "@type": "LocalBusiness",
-    "name": "FloCare",
+    "name": "FLOcare",
     "image": "logo.jpg",
     "url": "https://www.flocare.co.uk",
     "telephone": "+447936060206",
@@ -252,3 +252,4 @@
   </script>
 </body>
 </html>
+
