--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>FLOcare — Professional Cleaning, Domestic & Hospitality Services</title>
   <link rel="stylesheet" href="index.css" />
-  <meta name="description" content="FloCare provides professional cleaning, domestic, and hospitality services. Reliable, affordable, and tailored to your needs." />
+  <meta name="description" content="FLOcare provides professional cleaning, domestic, and hospitality services. Reliable, affordable, and tailored to your needs." />
 </head>
 <body>
   <!-- Skip link for accessibility -->
@@ -184,3 +184,4 @@
   </script>
 </body>
 </html>
+
