--- a/services.html
+++ b/services.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Services — FLOcare</title>
   <link rel="stylesheet" href="index.css" />
-  <meta name="description" content="Explore FloCare’s cleaning services for homes, businesses, and hospitality—plus add-ons, pricing, and FAQs." />
+  <meta name="description" content="Explore FLOcare’s cleaning services for homes, businesses, and hospitality—plus add-ons, pricing, and FAQs." />
 </head>
 <body>
   <a class="skip-link" href="#main">Skip to content</a>
@@ -252,3 +252,4 @@
   </script>
 </body>
 </html>
+
