--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>About Us — FLOcare</title>
   <link rel="stylesheet" href="index.css" />
-  <meta name="description" content="Learn about FloCare—our mission, story, core values, certifications, and the team delivering high-quality cleaning services." />
+  <meta name="description" content="Learn about FLOcare—our mission, story, core values, and the team delivering high-quality cleaning services." />
 </head>
 <body>
   <a class="skip-link" href="#main">Skip to content</a>
@@ -216,3 +216,4 @@
   </script>
 </body>
 </html>
+
